@@ -11,16 +11,20 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
-import org.springframework.util.AntPathMatcher;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
+
+import java.io.IOException;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -37,20 +41,37 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
         final String uri = request.getRequestURI();
-        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) return true; // preflight
+        final String method = request.getMethod();
 
         AntPathMatcher m = new AntPathMatcher();
+
         String[] skip = {
-                "/auth/oidc/start",
-                "/auth/oidc/callback",
-                "/auth/refresh",
-                "/auth/logout",
-                "/health",
-                "/api/dev/**",      // 개발용 (있다면)
-                "/docs/**",
-                "/v3/api-docs/**",
-                "/swagger-ui/**",
-                "/swagger-ui.html"
+            "/auth/oidc/start",
+            "/auth/oidc/callback",
+            "/auth/refresh",
+            "/auth/logout",
+            "/api/auth/oidc/start",        // /auth → /api/auth 수정
+            "/api/auth/oidc/callback",     // /auth → /api/auth 수정
+            "/api/auth/refresh",           // /auth → /api/auth 수정
+            "/api/auth/logout",            // /auth → /api/auth 수정
+            "/health",
+            "/api/dev/**",
+            "/docs/**",
+            "/v3/api-docs/**",
+            "/swagger-ui/**",
+            "/swagger-ui.html",
+            "/api/posts/**",
+            "/api/users/*/posts",
+            "/api/posts/*/bookmarks",
+            "/api/posts/*/comments/*",
+            "/api/youtube/*",
+            "/api/posts",
+            "/api/posts/*/like",
+            "/api/search/**",
+            "/api/search",
+            "/api/harmony/**",
+            "/api/harmony"
+
         };
         for (String p : skip) {
             if (m.match(p, uri)) return true;
@@ -60,7 +81,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
     @Override
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
-            throws ServletException, IOException {
+        throws ServletException, IOException {
 
         // 이미 인증되어 있으면 그대로 통과(기존 동작 유지)
         Authentication existing = SecurityContextHolder.getContext().getAuthentication();
@@ -86,18 +107,20 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             jwtUtil.validateAccess(token);
             String userId = jwtUtil.getUserIdFromAccess(token);
 
-            // roles(optional) → 권한 매핑
-//            Collection<SimpleGrantedAuthority> authorities = extractAuthorities(token);
 
-            // 3) SecurityContext 세팅(기존 목적 유지)
-            var authorities = Collections.<SimpleGrantedAuthority>emptyList();
-// 또는 Collections.emptyList() 도 가능 (권한 검사는 안 하니까)
+            // 🎯 기본 ROLE_USER 권한 부여
+            List<GrantedAuthority> authorities = List.of(
+                new SimpleGrantedAuthority("ROLE_USER")
+            );
+
+            var auth = new UsernamePasswordAuthenticationToken(userId, null, authorities);
+            auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
 
             UsernamePasswordAuthenticationToken auth =
                     new UsernamePasswordAuthenticationToken(userId, null,authorities);
             auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
             SecurityContextHolder.getContext().setAuthentication(auth);
-            // 4) 컨트롤러에서 헤더 없이도 userId를 사용할 수 있도록 attribute 세팅(요청 범위)
+            // 컨트롤러에서 헤더 없이도 userId를 사용할 수 있도록 attribute 세팅(요청 범위)
             req.setAttribute(USER_ID_ATTR, userId);
 
             chain.doFilter(req, res);
@@ -112,6 +135,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             res.getWriter().write("{\"error\":\"unauthorized\",\"message\":\"Invalid or expired token\"}");
         }
     }
+
 
     /** Authorization 헤더 → access 쿠키 → (개발용) accessToken 쿼리파라미터 순으로 토큰을 추출 */
     private String extractAccessToken(HttpServletRequest req) {
@@ -160,4 +184,5 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 //                .map(r -> new SimpleGrantedAuthority("ROLE_" + r))
 //                .collect(Collectors.toList());
 //    }
+
 }
